css fixes
added scrollbar, alignment fixes, scene button z-index fix

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -33,6 +33,7 @@
         right: 1rem;
         top: 50%;
         transform: translate(0, -50%);
+        z-index: 2;
 
         border: none;
         padding: .5rem;
